Improved frameskip: better performance, because realvideo buffer is not updated when frameskip
Improved sound: Silence detector activated by default but can be disabled
Improved top speed: loading sound is distorted when setting top speed
Improved autoload: new setting to run at top speed the reset+load"" process
Improved default configuration: when the configuration file doesn't exist, the new one has the autosave configuration setting enabled
Improved configuration parsing: if unknown setting found on configuration file, ZEsarUX will open but warns about the error, and the autosave feature is not enabled
Improved rendering on text mode drivers: now realvideo mode can render directly to black&white text. Try TSConf with --vo stdout --realvideo --autoredrawstdout
Improved Linux library dependencies: libssl is not enabled by default on compilation

Fixed ZX-Uno emulation: 
* 128kb timings are the same as a Spectrum 128k. When port 1ffd enabled, port FF return FF
* Kempston port returns 0 when no kempston selected. New BIOS can be used now

Fixed TBBlue MMU when using segment 0000-3FFFH
Fixed Raster interrupts on ZX-Uno and TBBlue. Horizontal raster position was wrong
Fixed window footer when running Pentagon
Fixed panic screen: now it is shown on all machines. New design. I hope you never see it ;)
Fixed some crashes with speech enabled and opening some menus: AY Registers, AY Player, etc...
Fixed annoying sound on Dandanator rom menu
Fixed bug on Z80 cpu core, iff2 was not being reset to 0 when firing an interrupt, so reading it by using LD A,R and LD A,I affected many demos

Some other minor bugfixes and improvements



Version 6.0. 27 November 2017 - Gunfright edition

Added machine ZX-Evolution TS-Conf
Added machine Chrome (Italian ZX Spectrum Clone)
Added machine MK14
Added lots of new ZEsarUX remote commands (ZRCP). See ZRCP help to know them
Added Visualmem, Poke, Find, Save binary menus also for Sinclair QL
Added QL GUI Style