@@ -80,6 +80,7 @@ Improved frameskip: better performance, because realvideo buffer is not updated 
 Improved sound: Silence detector activated by default but can be disabled
 Improved top speed: loading sound is distorted when setting top speed
 Improved autoload: new setting to run at top speed the reset+load"" process
+Improved real tape loading: now it shows a percentage of tape loaded
 Improved default configuration: when the configuration file doesn't exist, the new one has the autosave configuration setting enabled
 Improved configuration parsing: if unknown setting found on configuration file, ZEsarUX will open but warns about the error, and the autosave feature is not enabled
 Improved rendering on text mode drivers: now realvideo mode can render directly to black&white text. Try TSConf with --vo stdout --realvideo --autoredrawstdout
